[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/font/RubikItalicSmallest.tres" type="DynamicFont" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://components/button_base/button_base.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/new_game/new_game.gd" type="Script" id=4]
[ext_resource path="res://assets/font/RubikItalicSmall.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/icons/icon_meta.svg" type="Texture" id=6]
[ext_resource path="res://assets/icons/icon_left.svg" type="Texture" id=7]
[ext_resource path="res://assets/icons/icon_replay.svg" type="Texture" id=9]
[ext_resource path="res://assets/icons/icon_right.svg" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxLine" id=11]
color = Color( 0.0627451, 0.0745098, 0.117647, 1 )
thickness = 3

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.164706, 0.215686, 0.360784, 0.792157 )

[sub_resource type="InputEventAction" id=4]
action = "ui_cancel"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "Enter"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Container:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 700 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Container:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 700 ) ]
}

[node name="NewGame" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Container" type="HBoxContainer" parent="."]
margin_top = 700.0
margin_right = 700.0
margin_bottom = 1400.0
alignment = 1

[node name="Normal" type="PanelContainer" parent="Container"]
margin_left = 30.0
margin_top = 299.0
margin_right = 670.0
margin_bottom = 700.0
rect_min_size = Vector2( 640, 0 )
size_flags_vertical = 12
custom_styles/panel = SubResource( 10 )

[node name="V" type="VBoxContainer" parent="Container/Normal"]
margin_left = 16.0
margin_top = 16.0
margin_right = 624.0
margin_bottom = 385.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 5
custom_constants/separation = 16
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Normal/V"]
margin_right = 608.0
margin_bottom = 57.0

[node name="Label" type="Label" parent="Container/Normal/V/VBoxContainer"]
modulate = Color( 1, 0.0862745, 0.564706, 1 )
margin_right = 608.0
margin_bottom = 29.0
text = "T_NORMAL"
align = 1

[node name="Label2" type="Label" parent="Container/Normal/V/VBoxContainer"]
modulate = Color( 0.952941, 0.752941, 0.368627, 1 )
margin_top = 33.0
margin_right = 608.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 5 )
text = "T_NORMAL_DESCRIPTION"
align = 1

[node name="HSeparator3" type="HSeparator" parent="Container/Normal/V"]
margin_top = 73.0
margin_right = 608.0
margin_bottom = 77.0
custom_styles/separator = SubResource( 11 )

[node name="Meta" type="PanelContainer" parent="Container/Normal/V"]
margin_top = 93.0
margin_right = 608.0
margin_bottom = 177.0
custom_styles/panel = SubResource( 14 )

[node name="V" type="VBoxContainer" parent="Container/Normal/V/Meta"]
margin_right = 608.0
margin_bottom = 84.0
custom_constants/separation = 0

[node name="H" type="HBoxContainer" parent="Container/Normal/V/Meta/V"]
margin_right = 608.0
margin_bottom = 60.0
custom_constants/separation = 8

[node name="Labels" type="VBoxContainer" parent="Container/Normal/V/Meta/V/H"]
margin_right = 404.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="Meta" type="Label" parent="Container/Normal/V/Meta/V/H/Labels"]
modulate = Color( 1, 0.0862745, 0.564706, 1 )
margin_top = 4.0
margin_right = 404.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "T_META_BONUS"
uppercase = true

[node name="Name" type="Label" parent="Container/Normal/V/Meta/V/H/Labels"]
modulate = Color( 0.952941, 0.752941, 0.368627, 1 )
margin_top = 26.0
margin_right = 404.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "RANDOM"
clip_text = true
uppercase = true

[node name="Icon" type="TextureRect" parent="Container/Normal/V/Meta/V/H"]
self_modulate = Color( 1, 0.0862745, 0.564706, 1 )
margin_left = 412.0
margin_right = 472.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_vertical = 0
texture = ExtResource( 6 )
expand = true

[node name="Prev" parent="Container/Normal/V/Meta/V/H" instance=ExtResource( 3 )]
margin_left = 480.0
margin_right = 540.0
margin_bottom = 60.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../../../HBoxContainer/Start")
focus_neighbour_right = NodePath("../Next")
focus_neighbour_bottom = NodePath("../../../../Story/H/Toggle")
size_flags_vertical = 0
icon = ExtResource( 7 )
prevent_doubleclick = false

[node name="Next" parent="Container/Normal/V/Meta/V/H" instance=ExtResource( 3 )]
margin_left = 548.0
margin_right = 608.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../Prev")
focus_neighbour_top = NodePath("../../../../HBoxContainer/Start")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../../../Story/H/Toggle")
size_flags_vertical = 0
icon = ExtResource( 11 )
prevent_doubleclick = false

[node name="Description" type="Label" parent="Container/Normal/V/Meta/V"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_top = 60.0
margin_right = 608.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 5 )
text = "For every push skill used"
autowrap = true

[node name="Lock" type="Panel" parent="Container/Normal/V/Meta"]
visible = false
margin_right = 608.0
margin_bottom = 84.0
custom_styles/panel = SubResource( 16 )

[node name="Centered" type="CenterContainer" parent="Container/Normal/V/Meta/Lock"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Container/Normal/V/Meta/Lock/Centered"]
modulate = Color( 0.952941, 0.752941, 0.368627, 1 )
margin_left = 182.0
margin_top = 27.0
margin_right = 425.0
margin_bottom = 56.0
text = "T_UNLOCKS_AT_10"
uppercase = true

[node name="HSeparator" type="HSeparator" parent="Container/Normal/V"]
margin_top = 193.0
margin_right = 608.0
margin_bottom = 197.0
custom_styles/separator = SubResource( 11 )

[node name="Story" type="PanelContainer" parent="Container/Normal/V"]
margin_top = 213.0
margin_right = 608.0
margin_bottom = 273.0
custom_styles/panel = SubResource( 14 )

[node name="H" type="HBoxContainer" parent="Container/Normal/V/Story"]
margin_right = 608.0
margin_bottom = 60.0

[node name="Labels" type="VBoxContainer" parent="Container/Normal/V/Story/H"]
margin_right = 544.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="Story" type="Label" parent="Container/Normal/V/Story/H/Labels"]
modulate = Color( 1, 0.0862745, 0.564706, 1 )
margin_top = 4.0
margin_right = 544.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "T_STORY"
uppercase = true

[node name="Setting" type="Label" parent="Container/Normal/V/Story/H/Labels"]
modulate = Color( 0.952941, 0.752941, 0.368627, 1 )
margin_top = 26.0
margin_right = 544.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "T_STORY_UNREAD"
clip_text = true

[node name="Toggle" parent="Container/Normal/V/Story/H" instance=ExtResource( 3 )]
margin_left = 548.0
margin_right = 608.0
margin_bottom = 60.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../../Meta/V/H/Next")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../../HBoxContainer/Start")
icon = ExtResource( 9 )

[node name="HSeparator2" type="HSeparator" parent="Container/Normal/V"]
margin_top = 289.0
margin_right = 608.0
margin_bottom = 293.0
custom_styles/separator = SubResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="Container/Normal/V"]
margin_top = 309.0
margin_right = 608.0
margin_bottom = 369.0

[node name="BackToMenu" parent="Container/Normal/V/HBoxContainer" instance=ExtResource( 3 )]
margin_right = 60.0
margin_bottom = 60.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../Story/H/Toggle")
focus_neighbour_right = NodePath("../Start")
focus_neighbour_bottom = NodePath(".")
shortcut = SubResource( 5 )
icon = ExtResource( 7 )

[node name="Start" parent="Container/Normal/V/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 64.0
margin_right = 608.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../BackToMenu")
focus_neighbour_top = NodePath("../../Story/H/Toggle")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
size_flags_horizontal = 3
text = "T_START_RUN"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Enter = SubResource( 6 )
anims/RESET = SubResource( 7 )

[connection signal="button_down" from="Container/Normal/V/Meta/V/H/Prev" to="." method="cycle_meta" binds= [ -1 ]]
[connection signal="button_down" from="Container/Normal/V/Meta/V/H/Next" to="." method="cycle_meta" binds= [ 1 ]]
[connection signal="button_down" from="Container/Normal/V/Story/H/Toggle" to="." method="toggle_story_reset"]
[connection signal="button_down" from="Container/Normal/V/HBoxContainer/BackToMenu" to="." method="hide"]
[connection signal="button_down" from="Container/Normal/V/HBoxContainer/Start" to="." method="start_normal"]
